[package]
edition = "2021"
name    = "secp256k1-sig-verify-contract"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "cdylib", "rlib" ]

[features]
library = [  ]
tests   = [ "library", "cw-multi-test" ]

[dependencies]
cosmwasm-schema = "1.2.3"
cosmwasm-std    = "1.0.0"
cw-multi-test   = { version = "0.16.3", optional = true }
cw-storage-plus = "1.0.1"
cw2             = "1.0.1"
hex             = "0.4.3"
schemars        = "0.8.12"
secp256k1       = "0.28.0"
serde           = "1.0.160"
sha2            = "0.10.8"
thiserror       = "1.0.40"

[dev-dependencies]
cw-multi-test = "0.16.3"